--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title>La Iluminada - Ilumina Tu Vida</title>
 		<link rel="stylesheet" type="text/css" href="css/styles.css" media="screen">
+		<link rel="stylesheet" type="text/css" href="css/hover-especial.css" media="screen">
 	</head>
 	<body>
 		<header class="header-home">
@@ -12,16 +13,16 @@
 				
 				<ul class="first-nav">
 		            <li class="first-li"><a href="#">Inicio</a></li>
-		            <li class="first-li"><a href="#">Productos</a>
+		            <li class="first-li"><a href="productos/productos.html">Productos</a>
 			            <ul class="sub-menu">
-			            	<li><a href="#">Todos los Productos</a></li>
-				            <li><a href="#">Luces de Exterior</a></li>
-				            <li><a href="#">Luces de interior</a></li>
-				            <li><a href="#">Luces led</a></li>
-				            <li><a href="#">Luces de habitacion</a></li>  
+			            	<li><a href="productos/productos.html">Todos los Productos</a></li>
+				            <li><a href="productos/luces-exterior.html">Luces de Exterior</a></li>
+				            <li><a href="productos/luces-interior.html">Luces de interior</a></li>
+				            <li><a href="productos/luces-led.html">Luces led</a></li>
+				            <li><a href="productos/luces-habitacion.html">Luces de habitacion</a></li>  
 			            </ul>
 		            </li>
-		            <li class="first-li"><a href="#">Proyectos</a></li>
+		            <li class="first-li"><a href="proyectos/proyectos.html">Proyectos</a></li>
 		            <li class="first-li"><a href="#">Noticias</a></li>
 		            <li class="first-li"><a href="#">Contactos</a></li>
           		</ul>
@@ -34,6 +35,96 @@
 		</header>
 
 		<!--Aqui van <sections> para las secciones -->
+
+		<section class="subsection subsection-products"> <!--Jimmy estos elementos ya tienen estilos uselos para el about y las otras secciones poniendo esta clase a los sections es-->
+			<h2>Productos</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+			Nullam eu orci placerat, posuere augue vehicula, semper leo. ornare a condimentum id, egestas sed libero. Aenean sit amet risus sed nisi consequat molestie eget non mi. Vivamus faucibus lacinia ex. Ut commodo sit amet nulla non auctor. Praesent sit amet rhoncus nisi, et imperdiet metus. 
+			</p>
+			<div class="div-category">
+				<div class="div-cat div-cat-principal">
+					<img src="img/kamal_Aplique.JPG">
+					<div class="deco deco-top"></div>
+					<div class="deco deco-lower"></div>
+					<div class="div-information">
+						<h3>Circle Bell</h3>
+						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
+						<a href="">Ver más</a>
+					</div>
+				</div><!-- div-cat-principal -->
+				<div class="div-cat div-cat-principal">
+					<img src="img/kamal_Aplique.JPG">
+					<div class="deco deco-top"></div>
+					<div class="deco deco-lower"></div>
+					<div class="div-information">
+						<h3>Circle Bell Dúo</h3>
+						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
+						<a href="">Ver más</a>
+					</div>
+				</div><!-- div-cat-principal -->
+				<div class="div-cat div-cat-principal">
+					<img src="img/kamal_Aplique.JPG">
+					<div class="deco deco-top"></div>
+					<div class="deco deco-lower"></div>
+					<div class="div-information">
+						<h3>Grass Air</h3>
+						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
+						<a href="">Ver más</a>
+					</div>
+				</div><!-- div-cat-principal -->
+				<div class="div-cat div-cat-principal">
+					<img src="img/kamal_Aplique.JPG">
+					<div class="deco deco-top"></div>
+					<div class="deco deco-lower"></div>
+					<div class="div-information">
+						<h3>Zodiac Led</h3>
+						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
+						<a href="">Ver más</a>
+					</div>
+				</div><!-- div-cat-principal -->
+				<div class="div-cat div-cat-principal">
+					<img src="img/kamal_Aplique.JPG">
+					<div class="deco deco-top"></div>
+					<div class="deco deco-lower"></div>
+					<div class="div-information">
+						<h3>Sally Iluminate</h3>
+						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
+						<a href="">Ver más</a>
+					</div>
+				</div><!-- div-cat-principal -->
+				<div class="div-cat div-cat-principal">
+					<img src="img/kamal_Aplique.JPG">
+					<div class="deco deco-top"></div>
+					<div class="deco deco-lower"></div>
+					<div class="div-information">
+						<h3>Sanjay Tan</h3>
+						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
+						<a href="">Ver más</a>
+					</div>
+				</div><!-- div-cat-principal -->
+				<div class="div-cat div-cat-principal">
+					<img src="img/kamal_Aplique.JPG">
+					<div class="deco deco-top"></div>
+					<div class="deco deco-lower"></div>
+					<div class="div-information">
+						<h3>Circle Red Dention</h3>
+						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
+						<a href="">Ver más</a>
+					</div>
+				</div><!-- div-cat-principal -->
+				<div class="div-cat div-cat-principal">
+					<img src="img/kamal_Aplique.JPG">
+					<div class="deco deco-top"></div>
+					<div class="deco deco-lower"></div>
+					<div class="div-information">
+						<h3>Circle Post</h3>
+						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
+						<a href="">Ver más</a>
+					</div>
+				</div><!-- div-cat-principal -->
+				
+			</div>
+		</section>
 
 		<footer>
 			<div class="contacts">
