estilos a las tipografias

--- a/productos/luces-exterior.html
+++ b/productos/luces-exterior.html
@@ -25,7 +25,7 @@
 		            <li class="first-li"><a href="#">Contactos</a></li>
           		</ul>
           	</nav>
-			<div class="title-header-subsection">
+			<div class="subsection title-header-subsection">
 			    <h1>Productos / Luces de Exterior</h1>
 
 			    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean rutrum, urna eget rhoncus congue, augue erat porttitor purus, non iaculis tellus ex eget metus. Consectetur adipiscing elit.
