Se terminó el index con todos los anchors

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<div class="div-information">
 						<h3>Luces de Exterior</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
+						<a href="productos/luces-exterior.html">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
 				<div class="div-cat div-cat-principal">
@@ -74,7 +74,7 @@
 					<div class="div-information">
 						<h3>Luces Otra Categoría</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
+						<a href="productos/luces-exterior.html">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
 				<div class="div-cat div-cat-principal">
@@ -84,7 +84,7 @@
 					<div class="div-information">
 						<h3>Luces de Habitación</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
+						<a href="productos/luces-habitacion.html">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
 				<div class="div-cat div-cat-principal">
@@ -94,7 +94,7 @@
 					<div class="div-information">
 						<h3>Luces Otra Categoría</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
+						<a href="productos/luces-habitacion.html">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
 				<div class="div-cat div-cat-principal">
@@ -104,7 +104,7 @@
 					<div class="div-information">
 						<h3>Luces de Interior</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
+						<a href="productos/luces-interior.html">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
 				<div class="div-cat div-cat-principal">
@@ -114,7 +114,7 @@
 					<div class="div-information">
 						<h3>Luces Otra Categoría</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
+						<a href="productos/luces-interior.html">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
 				<div class="div-cat div-cat-principal">
@@ -124,7 +124,7 @@
 					<div class="div-information">
 						<h3>Luces Led</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
+						<a href="productos/luces-led.html">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
 				<div class="div-cat div-cat-principal">
@@ -134,7 +134,7 @@
 					<div class="div-information">
 						<h3>Luces Otra Categoría</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
+						<a href="productos/luces-led.html">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
 				
@@ -149,6 +149,7 @@
 				<div class="div-infobox-title">
 					<h2>Feria de La luz en el Barrio Chino</h2>
 					<img src="img/b-chino-luz.jpg">
+					<p class="header-button"><a class="button-products" href="#">Ver Más</a></p>
 				</div>
 				<div class="div-infobox-content">
 					<p>Cras eget dui nibh. Mauris egestas diam id risus varius, vitae elementum elit condimentum. Vivamus rhoncus scelerisque lectus, quis elementum risus scelerisque in. In vehicula sem eget lacinia fringilla. Etiam tempor sem sem, a malesuada erat tristique at. Nullam lobortis mauris sit amet tortor finibus, sed ullamcorper lorem pharetra. Mauris consectetur hendrerit orci, eget lobortis tortor euismod quis.</p>
@@ -160,6 +161,7 @@
 				<div class="div-infobox-title">
 					<h2>Más luz en las Paradas</h2>
 					<img src="img/parada-bus-luz.jpg">
+					<p class="header-button"><a class="button-products" href="#">Ver Más</a></p>
 				</div>
 				<div class="div-infobox-content">
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean rutrum, urna eget rhoncus congue, augue erat porttitor purus, non iaculis tellus ex eget metus. Consectetur adipiscing elit.Nullam eu orci placerat, posuere augue vehicula, semper leo. Pellentesque tincidunt euismod massa eu rhoncus. Donec mattis ante in consectetur congue. Aliquam elementum pharetra quam faucibus accumsan.</p>
@@ -176,6 +178,7 @@
 				<input type="text" placeholder="Nombre">
 				<input type="e-mail" placeholder="E-mail">
 				<textarea placeholder="Mensaje"></textarea>
+				<p class="header-button"><a class="button-products" href="#">Enviar</a></p>
 			</div>
 		</section>
 		<footer>
@@ -187,9 +190,9 @@
 			<a href="#" class="logo-central"><img class="logo-footer" src="img/lailuminada.png"></a>
 			<div class="social-network">
 				<ul>
-					<li class="foot-facebook"><a href="#">Facebook</a></li>
-					<li class="foot-twiter"><a href="#">Twitter</a></li>
-					<li class="foot-facebook"><a href="#">Other</a></li>
+					<li class="foot-facebook"><a href="https://es-es.facebook.com/">Facebook</a></li>
+					<li class="foot-twiter"><a href="https://twitter.com/?lang=es">Twitter</a></li>
+					<li class="foot-facebook"><a href="https://es-es.facebook.com/">Other</a></li>
 				</ul>
 			</div>
 		</footer>
