Se ajustaron los anchors de proyectos

--- a/proyectos/proyectos.html
+++ b/proyectos/proyectos.html
@@ -7,24 +7,26 @@
 	</head>
 	<body>
 		<header class="header-projects-news">
-			<a href="#"><img class="logo" src="../img/lailuminada.png"></a>
-			<nav class="header-nav">
-				<ul class="first-nav">
-		            <li class="first-li"><a href="../index.html">Inicio</a></li>
-		            <li class="first-li"><a href="#">Productos</a>
-			            <ul class="sub-menu">
-			            	<li><a href="productos.html">Todos los Productos</a></li>
-				            <li><a href="luces-exterior.html">Luces de Exterior</a></li>
-				            <li><a href="luces-interior.html">Luces de interior</a></li>
-				            <li><a href="luces-led.html">Luces led</a></li>
-				            <li><a href="luces-habitacion.html">Luces de habitacion</a></li>   
-			            </ul>
-		            </li>
-		            <li class="first-li"><a href="../proyectos/proyectos.html">Proyectos</a></li>
-		            <li class="first-li"><a href="#">Noticias</a></li>
-		            <li class="first-li"><a href="#">Contactos</a></li>
-          		</ul>
-          	</nav>
+			<div class="nav-banner">
+				<a href="../index.html"><img class="logo" src="../img/lailuminada.png"></a>
+				<nav class="header-nav">
+					<ul class="first-nav">
+			            <li class="first-li"><a href="../index.html">Inicio</a></li>
+			            <li class="first-li"><a href="#">Productos</a>
+				            <ul class="sub-menu">
+				            	<li><a href="../productos/productos.html">Todos los Productos</a></li>
+					            <li><a href="../productos/luces-exterior.html">Luces de Exterior</a></li>
+					            <li><a href="../productos/luces-interior.html">Luces de interior</a></li>
+					            <li><a href="../productos/luces-led.html">Luces led</a></li>
+					            <li><a href="../productos/luces-habitacion.html">Luces de habitacion</a></li>   
+				            </ul>
+			            </li>
+			            <li class="first-li"><a href="../proyectos/proyectos.html">Proyectos</a></li>
+			            <li class="first-li"><a href="../index.html">Noticias</a></li>
+			            <li class="first-li"><a href="../index.html">Contactos</a></li>
+	          		</ul>
+	          	</nav>
+          	</div>
 			<div class="subsection title-header-subsection">
 			    <h1>Proyectos</h1>
 
@@ -39,6 +41,7 @@
 				<div class="div-infobox-title">
 					<h2>Iluminación para Navidad</h2>
 					<img src="../img/sanjose-luz.jpg">
+					<p class="header-button"><a class="button-products" href="proyecto/proyecto.html">Ver Más</a></p>
 				</div>
 				<div class="div-infobox-content">
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean rutrum, urna eget rhoncus congue, augue erat porttitor purus, non iaculis tellus ex eget metus. Consectetur adipiscing elit.Nullam eu orci placerat, posuere augue vehicula, semper leo. Pellentesque tincidunt euismod massa eu rhoncus. Donec mattis ante in consectetur congue. Aliquam elementum pharetra quam faucibus accumsan.</p>
@@ -50,6 +53,7 @@
 				<div class="div-infobox-title">
 					<h2>Iluminación de Espacios</h2>
 					<img src="../img/luz-endepa.jpg">
+					<p class="header-button"><a class="button-products" href="proyecto/proyecto.html">Ver Más</a></p>
 				</div>
 				<div class="div-infobox-content">
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean rutrum, urna eget rhoncus congue, augue erat porttitor purus, non iaculis tellus ex eget metus. Consectetur adipiscing elit.Nullam eu orci placerat, posuere augue vehicula, semper leo. Pellentesque tincidunt euismod massa eu rhoncus. Donec mattis ante in consectetur congue. Aliquam elementum pharetra quam faucibus accumsan.</p>
@@ -61,6 +65,7 @@
 				<div class="div-infobox-title">
 					<h2>Iluminación de Fachadas</h2>
 					<img src="../img/museoniño-luz.jpg">
+					<p class="header-button"><a class="button-products" href="proyecto/proyecto.html">Ver Más</a></p>
 				</div>
 				<div class="div-infobox-content">
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean rutrum, urna eget rhoncus congue, augue erat porttitor purus, non iaculis tellus ex eget metus. Consectetur adipiscing elit.Nullam eu orci placerat, posuere augue vehicula, semper leo. Pellentesque tincidunt euismod massa eu rhoncus. Donec mattis ante in consectetur congue. Aliquam elementum pharetra quam faucibus accumsan.</p>
@@ -75,12 +80,12 @@
 				<a href="#">(111) 1111-1111</a></p>
 				<p><a href="#">lailuminada@gmail.com</a></p>
 			</div>
-			<a href="#" class="logo-central"><img class="logo-footer" src="../img/lailuminada.png"></a>
+			<a href="../index.html" class="logo-central"><img class="logo-footer" src="../img/lailuminada.png"></a>
 			<div class="social-network">
 				<ul>
-					<li class="foot-facebook"><a href="#">Facebook</a></li>
-					<li class="foot-twiter"><a href="#">Twitter</a></li>
-					<li class="foot-facebook"><a href="#">Other</a></li>
+					<li class="foot-facebook"><a href="https://es-es.facebook.com/">Facebook</a></li>
+					<li class="foot-twiter"><a href="https://twitter.com/?lang=es">Twitter</a></li>
+					<li class="foot-facebook"><a href="https://es-es.facebook.com/">Other</a></li>
 				</ul>
 			</div>
 		</footer>
