Se ajustaron los anchors de productos

--- a/productos/luces-habitacion.html
+++ b/productos/luces-habitacion.html
@@ -7,24 +7,26 @@
 	</head>
 	<body>
 		<header class="header-products">
-			<a href="#"><img class="logo" src="../img/lailuminada.png"></a>
-			<nav class="header-nav">
-				<ul class="first-nav">
-		            <li class="first-li"><a href="../index.html">Inicio</a></li>
-		            <li class="first-li"><a href="#">Productos</a>
-			            <ul class="sub-menu">
-			            	<li><a href="productos.html">Todos los Productos</a></li>
-				            <li><a href="luces-exterior.html">Luces de Exterior</a></li>
-				            <li><a href="luces-interior.html">Luces de interior</a></li>
-				            <li><a href="luces-led.html">Luces led</a></li>
-				            <li><a href="luces-habitacion.html">Luces de habitacion</a></li>  
-			            </ul>
-		            </li>
-		            <li class="first-li"><a href="../proyectos/proyectos.html">Proyectos</a></li>
-		            <li class="first-li"><a href="#">Noticias</a></li>
-		            <li class="first-li"><a href="#">Contactos</a></li>
-          		</ul>
-          	</nav>
+			<div class="nav-banner">
+				<a href="#"><img class="logo" src="../img/lailuminada.png"></a>
+				<nav class="header-nav">
+					<ul class="first-nav">
+			            <li class="first-li"><a href="../index.html">Inicio</a></li>
+			            <li class="first-li"><a href="#">Productos</a>
+				            <ul class="sub-menu">
+				            	<li><a href="productos.html">Todos los Productos</a></li>
+					            <li><a href="luces-exterior.html">Luces de Exterior</a></li>
+					            <li><a href="luces-interior.html">Luces de interior</a></li>
+					            <li><a href="luces-led.html">Luces led</a></li>
+					            <li><a href="luces-habitacion.html">Luces de habitacion</a></li>  
+				            </ul>
+			            </li>
+			            <li class="first-li"><a href="../proyectos/proyectos.html">Proyectos</a></li>
+			            <li class="first-li"><a href="#">Noticias</a></li>
+			            <li class="first-li"><a href="#">Contactos</a></li>
+	          		</ul>
+	          	</nav>
+          	</div>
 			<div class="subsection title-header-subsection">
 			    <h1>Productos / Luces de Habitación</h1>
 
