--- a/productos/luces-exterior.html
+++ b/productos/luces-exterior.html
@@ -7,24 +7,26 @@
 	</head>
 	<body>
 		<header class="header-products">
-			<a href="#"><img class="logo" src="../img/lailuminada.png"></a>
-			<nav class="header-nav">
-				<ul class="first-nav">
-		            <li class="first-li"><a href="../index.html">Inicio</a></li>
-		            <li class="first-li"><a href="#">Productos</a>
-			            <ul class="sub-menu">
-			            	<li><a href="productos.html">Todos los Productos</a></li>
-				            <li><a href="luces-exterior.html">Luces de Exterior</a></li>
-				            <li><a href="luces-interior.html">Luces de interior</a></li>
-				            <li><a href="luces-led.html">Luces led</a></li>
-				            <li><a href="luces-habitacion.html">Luces de habitacion</a></li>  
-			            </ul>
-		            </li>
-		            <li class="first-li"><a href="../proyectos/proyectos.html">Proyectos</a></li>
-		            <li class="first-li"><a href="#">Noticias</a></li>
-		            <li class="first-li"><a href="#">Contactos</a></li>
-          		</ul>
-          	</nav>
+			<div class="nav-banner">
+				<a href="#"><img class="logo" src="../img/lailuminada.png"></a>
+				<nav class="header-nav">
+					<ul class="first-nav">
+			            <li class="first-li"><a href="../index.html">Inicio</a></li>
+			            <li class="first-li"><a href="#">Productos</a>
+				            <ul class="sub-menu">
+				            	<li><a href="productos.html">Todos los Productos</a></li>
+					            <li><a href="luces-exterior.html">Luces de Exterior</a></li>
+					            <li><a href="luces-interior.html">Luces de interior</a></li>
+					            <li><a href="luces-led.html">Luces led</a></li>
+					            <li><a href="luces-habitacion.html">Luces de habitacion</a></li>  
+				            </ul>
+			            </li>
+			            <li class="first-li"><a href="../proyectos/proyectos.html">Proyectos</a></li>
+			            <li class="first-li"><a href="#">Noticias</a></li>
+			            <li class="first-li"><a href="#">Contactos</a></li>
+	          		</ul>
+	          	</nav>
+          	</div>
 			<div class="subsection title-header-subsection">
 			    <h1>Productos / Luces de Exterior</h1>
 
@@ -46,7 +48,7 @@
 					<div class="div-information">
 						<h3>Circle Bell</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
+						<a href="producto/lampara1.html">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
 				<div class="div-cat div-cat-principal">
@@ -56,7 +58,7 @@
 					<div class="div-information">
 						<h3>Circle Bell Dúo</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
+						<a href="producto/lampara1.html">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
 				<div class="div-cat div-cat-principal">
@@ -66,7 +68,7 @@
 					<div class="div-information">
 						<h3>Grass Air</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
+						<a href="producto/lampara1.html">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
 				<div class="div-cat div-cat-principal">
@@ -76,7 +78,7 @@
 					<div class="div-information">
 						<h3>Zodiac Led</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
+						<a href="producto/lampara1.html">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
 				<div class="div-cat div-cat-principal">
@@ -86,7 +88,7 @@
 					<div class="div-information">
 						<h3>Sally Iluminate</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
+						<a href="producto/lampara1.html">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
 				<div class="div-cat div-cat-principal">
@@ -96,7 +98,7 @@
 					<div class="div-information">
 						<h3>Sanjay Tan</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
+						<a href="producto/lampara1.html">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
 				<div class="div-cat div-cat-principal">
@@ -106,7 +108,7 @@
 					<div class="div-information">
 						<h3>Circle Red Dention</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
+						<a href="producto/lampara1.html">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
 				<div class="div-cat div-cat-principal">
@@ -116,7 +118,7 @@
 					<div class="div-information">
 						<h3>Circle Post</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
+						<a href="producto/lampara1.html">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
 
