--- a/productos/producto/lampara1.html
+++ b/productos/producto/lampara1.html
@@ -26,11 +26,24 @@
           	</nav>
 			<div class="subsection title-header-subsection">
 			    <h1>Productos / Luces Led / Zodiac Led</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean rutrum, urna eget rhoncus congue, augue erat porttitor purus, non iaculis tellus ex eget metus. Consectetur adipiscing elit.
+				Nullam eu orci placerat, posuere augue vehicula, semper leo. Pellentesque tincidunt euismod massa eu rhoncus. Donec mattis ante in consectetur congue. Aliquam elementum pharetra quam faucibus accumsan.</p>
+				<p> Maecenas massa odio, ornare a condimentum id, egestas sed libero. Aenean sit amet risus sed nisi consequat molestie eget non mi. Vivamus faucibus lacinia ex. Ut commodo sit amet nulla non auctor. Praesent sit amet rhoncus nisi, et imperdiet metus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 			</div><!-- title-header -->
 		</header>
-		<section class="subsection subsection-products">
-			<div class="div-infobox"></div>
-		</section>
+		<section class="subsection subsection-infobox">
+			<h2>Nombre del producto</h2>
+			<div class="div-infobox">
+				<div class="div-infobox-title">
+					<img class="img-noticia" src="../../img/luz-endepa.jpg">
+				</div>
+				<div class="div-infobox-content">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean rutrum, urna eget rhoncus congue, augue erat porttitor purus, non iaculis tellus ex eget metus. Consectetur adipiscing elit.Nullam eu orci placerat, posuere augue vehicula, semper leo. Pellentesque tincidunt euismod massa eu rhoncus. Donec mattis ante in consectetur congue. Aliquam elementum pharetra quam faucibus accumsan.</p>
+					<p> Maecenas massa odio, ornare a condimentum id, egestas sed libero. Aenean sit amet risus sed nisi consequat molestie eget non mi. Vivamus faucibus lacinia ex. Ut commodo sit amet nulla non auctor. Praesent sit amet rhoncus nisi, et imperdiet metus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+					<p>Cras eget dui nibh. Mauris egestas diam id risus varius, vitae elementum elit condimentum. Vivamus rhoncus scelerisque lectus, quis elementum risus scelerisque in. In vehicula sem eget lacinia fringilla. Etiam tempor sem sem, a malesuada erat tristique at. Nullam lobortis mauris sit amet tortor finibus, sed ullamcorper lorem pharetra. Mauris consectetur hendrerit orci, eget lobortis tortor euismod quis.</p>
+				</div>
+			</div>
+
 		<footer>
 			<div class="contacts">
 				<p><a href="#">(000) 0000-0000</a><br/>
@@ -49,3 +62,4 @@
 	</body>
 
 </html>
+
