completa seccion de Noticia

--- a/Noticia/noticia.html
+++ b/Noticia/noticia.html
@@ -25,8 +25,17 @@
           		</ul>
           	</nav>
           	<section class="subsection subsection-infobox">
-				<h2>Noticia</h2>
-				<div class="div-infobox"></div>
+				<div class="div-infobox">
+						<h2>Feria de La luz en el Barrio Chino</h2>
+					<div class="div-infobox-title">
+						<img class="img-noticia" src="../img/b-chino-luz.jpg">
+					</div>
+					<div class="div-infobox-content">
+						<p>Cras eget dui nibh. Mauris egestas diam id risus varius, vitae elementum elit condimentum. Vivamus rhoncus scelerisque lectus, quis elementum risus scelerisque in. In vehicula sem eget lacinia fringilla. Etiam tempor sem sem, a malesuada erat tristique at. Nullam lobortis mauris sit amet tortor finibus, sed ullamcorper lorem pharetra. Mauris consectetur hendrerit orci, eget lobortis tortor euismod quis.</p>
+						<p> Maecenas massa odio, ornare a condimentum id, egestas sed libero. Aenean sit amet risus sed nisi consequat molestie eget non mi. Vivamus faucibus lacinia ex. Ut commodo sit amet nulla non auctor. Praesent sit amet rhoncus nisi, et imperdiet metus. </p>
+						<p>Cras eget dui nibh. Mauris egestas diam id risus varius, vitae elementum elit condimentum. Vivamus rhoncus scelerisque lectus, quis elementum risus scelerisque in. In vehicula sem eget lacinia fringilla. Etiam tempor sem sem, a malesuada erat tristique at. Nullam lobortis mauris sit amet tortor finibus, sed ullamcorper lorem pharetra. Mauris consectetur hendrerit orci, eget lobortis tortor euismod quis.</p>
+					</div>
+				</div>
 			</section>
 		</header>
 		<footer>
