Se teminó completamente todo el index

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
 	<head>
 		<meta charset="UTF-8">
@@ -14,7 +15,7 @@
 					
 					<ul class="first-nav">
 			            <li class="first-li"><a href="#">Inicio</a></li>
-			            <li class="first-li"><a href="productos/productos.html">Productos</a>
+			            <li class="first-li"><a href="#product">Productos</a>
 				            <ul class="sub-menu">
 				            	<li><a href="productos/productos.html">Todos los Productos</a></li>
 					            <li><a href="productos/luces-exterior.html">Luces de Exterior</a></li>
@@ -34,7 +35,7 @@
 					<h1>Iluminando tu vida</h1>
 					<p>Productos diseñados para tu hogar pensando en ti.</p>
 				</div>
-				<p class="header-button"><a class="button-products" href="#">Nuestros Productos</a></p>
+				<p class="header-button"><a class="button-products" href="productos/productos.html">Nuestros Productos</a></p>
 			</div>
 		</header>
 
@@ -49,9 +50,7 @@
 			<img src="img/ligth-about.png">
 		</section>
 
-		<!--Aqui van <sections> para las secciones -->
-
-		<section class="subsection subsection-products"><!-- es importante poner la clase subsection en cada sección -->
+		<section id="product" class="subsection subsection-products"><!-- es importante poner la clase subsection en cada sección -->
 			<h2>Productos</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
 			Nullam eu orci placerat, posuere augue vehicula, semper leo. ornare a condimentum id, egestas sed libero. Aenean sit amet risus sed nisi consequat molestie eget non mi. Vivamus faucibus lacinia ex. Ut commodo sit amet nulla non auctor. Praesent sit amet rhoncus nisi, et imperdiet metus. 
@@ -149,7 +148,7 @@
 				<div class="div-infobox-title">
 					<h2>Feria de La luz en el Barrio Chino</h2>
 					<img src="img/b-chino-luz.jpg">
-					<p class="header-button"><a class="button-products" href="#">Ver Más</a></p>
+					<p class="header-button"><a class="button-products" href="Noticia/noticia.html">Ver Más</a></p>
 				</div>
 				<div class="div-infobox-content">
 					<p>Cras eget dui nibh. Mauris egestas diam id risus varius, vitae elementum elit condimentum. Vivamus rhoncus scelerisque lectus, quis elementum risus scelerisque in. In vehicula sem eget lacinia fringilla. Etiam tempor sem sem, a malesuada erat tristique at. Nullam lobortis mauris sit amet tortor finibus, sed ullamcorper lorem pharetra. Mauris consectetur hendrerit orci, eget lobortis tortor euismod quis.</p>
@@ -161,7 +160,7 @@
 				<div class="div-infobox-title">
 					<h2>Más luz en las Paradas</h2>
 					<img src="img/parada-bus-luz.jpg">
-					<p class="header-button"><a class="button-products" href="#">Ver Más</a></p>
+					<p class="header-button"><a class="button-products" href="Noticia/noticia.html">Ver Más</a></p>
 				</div>
 				<div class="div-infobox-content">
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean rutrum, urna eget rhoncus congue, augue erat porttitor purus, non iaculis tellus ex eget metus. Consectetur adipiscing elit.Nullam eu orci placerat, posuere augue vehicula, semper leo. Pellentesque tincidunt euismod massa eu rhoncus. Donec mattis ante in consectetur congue. Aliquam elementum pharetra quam faucibus accumsan.</p>
